# LakeRidersAlert

./: .gitignore  .ruff.toml  README.md  __init__.py  constants.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py  wake_alert.db
.github/workflows/: ci.yaml
constants/: __init__.py
helpers/: __init__.py  calendar_entries.py  constants.py  extract_calendar_entries.py  login.py  telegram_bot.py  write_calendar_entries_to_db.py
src/: main.py
src/lakeridersalert/helpers/: run.py  telegram_bot.py
src/tests/: tests.py
test/: test_data.py  tests.py
test/html/logged_in_v1/: logged_in.html
test/html/logged_in_v1/logged_in_files/: embed.html  jquery.fancybox-thumbs.css  jquery.fancybox.css  jquery.fancybox.js  jquery.qtip.css  jquery.qtip.js  js  messages_fr.js  methods.js
wakealert/constants/: __init__.py
wakealert/helpers/: browser.py  calendar_entries.py  run.py  telegram_bot.py  web.py
wakealert/test/: test_data.py  tests.py
wakealert/test/html/logged_in_v1/logged_in_files/: StaticMapService.GetMapImage  communs.js  fullcalendar.css  styles.css
